# CapitalWorld

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Capitalworld.desktop  README.md  appicon.rc  config.h.in  main.cpp  update_i18n.sh  workspace.code-workspace
.github/workflows/: cmake.yml  release.yml
cmake/: engine-download.cmake  engine.cmake
data/: buildings.json  company_names.json  products.json  research.json  ressources.json  theme.json
engine/core/: Consumer.h  MessageSystem.h  Music.cpp  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Timer.h  dispatcher.h  gamewindow.cpp  gamewindow.h  input.cpp  input.h  renderer.cpp  renderer.h
engine/graphics/: Animation.h  TextAnimation.cpp  TextAnimation.h  TextureManager.cpp  TextureManager.h  rect.h  sprite.cpp  text.cpp  text.h  texture.cpp  texture.h  texturemap.cpp
engine/ui/: Button.cpp  Button.h  ButtonListener.cpp  ButtonListener.h  Checkbox.cpp  Checkbox.h  ComboBox.cpp  ComboBox.h  Container.cpp  Container.h  ImageButton.cpp  ImageButton.h  Label.cpp  Label.h  ListBox.cpp  ListBox.h  Object.cpp  Object.h  Tab.cpp  Tab.h  TabBar.cpp  TabBar.h  TextItem.cpp  TextItem.h  Window.cpp  Window.h  scrollarea.cpp  scrollarea.h  windowmanager.cpp  windowmanager.h
engine/ui/dialogs/: MessageDialog.cpp  MessageDialog.h
engine/utils/: IniBase.cpp  IniBase.h  os.cpp  os.h  string.h  vector2.cpp  vector2.h
image_raw/: landscape.aseprite  logo.aseprite  title_background.xcf
images/: landscape.aseprite
images/tiles/: iso_tiles.json  iso_tiles.tm
locale/: capitalworld.pot  enum.pot  keymap.pot
locale/de/LC_MESSAGES/: capitalworld.mo  capitalworld.po  enum.mo  enum.po  keymap.mo  keymap.po
locale/en/LC_MESSAGES/: capitalworld.mo  capitalworld.po  enum.mo  enum.po  keymap.mo  keymap.po
scenes/: MainScene.cpp  worldscene.cpp  worldscene.h
scripts/: install_dependency.sh
services/: productservice.cpp  productservice.h
src/: constants.h  main.cpp  messages.h  translate.h
src/notifications/: Event.cpp  Event.h  EventQueue.cpp  EventQueue.h
src/scenes/: MainScene.cpp  MainScene.h  NewGameScene.cpp  NewGameScene.h  worldscene.cpp  worldscene.h
src/services/: buildingservice.cpp  buildingservice.h  productservice.cpp  productservice.h  researchservice.cpp  researchservice.h  ressourceservice.cpp  ressourceservice.h
src/ui/: BuildingSelectionComponent.cpp  BuildingSelectionComponent.h  BuildingSelectionWindow.cpp  BuildingSelectionWindow.h  ControlsTab.cpp  ControlsTab.h  LoanTab.cpp  LoanTab.h  ResearchHint.cpp  ResearchHint.h  SalesItemComponent.cpp  SalesItemComponent.h  SalesTab.cpp  SalesTab.h  SaveGameComponent.cpp  SaveGameComponent.h  SaveGameWindow.cpp  SaveGameWindow.h  SettingsWindow.cpp  SettingsWindow.h  StorageItemComponent.cpp  StorageItemComponent.h  WorkerTab.cpp  WorkerTab.h  buildingwindow.cpp  buildingwindow.h  buildwindow.cpp  buildwindow.h  factoryproductiontab.cpp  factoryproductiontab.h  farmproductiontab.cpp  farmproductiontab.h  hudcontainer.cpp  hudcontainer.h  line.cpp  line.h  optionswindow.cpp  optionswindow.h  productcomponent.cpp  productcomponent.h  (+11 more)
src/ui/windows/: BuildingSelectionWindow.cpp  BuildingSelectionWindow.h  Console.cpp  Console.h  PlayerWindow.cpp  PlayerWindow.h  SaveGameWindow.cpp  SaveGameWindow.h  SettingsWindow.cpp  SettingsWindow.h  buildingwindow.cpp  buildingwindow.h  buildwindow.cpp  buildwindow.h  optionswindow.cpp  optionswindow.h  researchwindow.cpp  researchwindow.h
src/world/: AIThread.cpp  AIThread.h  AnimatedMovement.cpp  AnimatedMovement.h  CompanyNameGenerator.cpp  CompanyNameGenerator.h  GameStateMutex.h  balance.cpp  balance.h  buildactions.h  building.cpp  building.h  buildingtypes.h  city.cpp  city.h  company.cpp  company.h  gamemap.cpp  gamemap.h  gamemaprenderer.cpp  gamemaprenderer.h  gamestate.cpp  gamestate.h  iso.cpp  iso.h  loan.cpp  loan.h  mapgenerator.cpp  mapgenerator.h  produceableobject.cpp  produceableobject.h  product.cpp  product.h  research.cpp  research.h  ressource.cpp  ressource.h  storage.cpp  storage.h  updatethread.cpp  (+1 more)
src/world/actions/: Action.cpp  Action.h  BaseAction.cpp  BaseAction.h  BuildAction.cpp  BuildAction.h  LoanAction.cpp  LoanAction.h  ProductionAction.cpp  ProductionAction.h  ResearchAction.cpp  ResearchAction.h  ResearchWorkerAction.cpp  ResearchWorkerAction.h  SalesPriceAction.cpp  SalesPriceAction.h
src/world/buildings/: BuildingComponent.cpp  BuildingComponent.h  HouseComponent.cpp  HouseComponent.h  ProductionConponent.cpp  ProductionConponent.h  SalesComponent.cpp  SalesComponent.h  StorageComponent.cpp  StorageComponent.h  TransportComponent.cpp  TransportComponent.h  WorkerComponent.cpp  WorkerComponent.h  street.cpp  street.h  transportoffice.cpp  transportoffice.h
src/world/graphics/: Sprite.cpp  Sprite.h
stuff/: build_uixcf.xcf  cursorxcf.xcf  fictional_brand_logos.7z  main_scenexcf.xcf  test_screenshot_base.xcf
test/: CMakeLists.txt  loan_test.cpp  transport_test.cpp
ui/: buildingwindow.cpp  buildingwindow.h  buildwindow.cpp  buildwindow.h  factoryproductiontab.cpp  factoryproductiontab.h  farmproductiontab.cpp  farmproductiontab.h  productcomponent.cpp  productcomponent.h
world/: buildactions.h  building.cpp  building.h  buildingtypes.h  city.cpp  city.h  company.cpp  company.h  gamemap.cpp  gamemap.h  gamemaprenderer.cpp  gamemaprenderer.h  gamestate.cpp  gamestate.h  mapgenerator.cpp  mapgenerator.h  product.cpp  product.h  ressource.cpp  ressource.h  storage.cpp  updatethread.cpp  updatethread.h
